# humanize-ai

./: .gitignore  .oxfmtrc.json  .vercelignore  API_CLIENT_SETUP.md  BACKEND_SUBSCRIPTION_ARCHITECTURE.md  CORS_FIX_SUMMARY.md  DEPLOYMENT_DIAGRAM.md  DEPLOYMENT_QUICK_START.md  MILESTONE_2_DEPLOYMENT_SUMMARY.md  MILESTONE_2_FINAL.md  MILESTONE_2_FIXES.md  MILESTONE_2_QUICK_START.md  MILESTONE_2_UI_INTEGRATION.md  MODEL_UPDATE_SUMMARY.md  MULTIPLE_WORKSPACES_QUICK_REFERENCE.md  MULTIPLE_WORKSPACES_SETUP.md  PROMPT_COMPARISON.md  README.md  SETUP_SUMMARY.md  STRIPE_INTEGRATION_VERIFICATION.md  STRIPE_INTEGRATION_WORKFLOW.md  SUBSCRIPTION_BALANCE_FIX.md  SUBSCRIPTION_FLOW_TEST.md  VERCEL_DEPLOYMENT.md  WORD_LIMIT_AFTER_SUBSCRIPTION.md  WORKOS_CORS_FIX.md  aliases.sh  biome.jsonc  check.sh  fix_json_duplicates.py  main.py  package.json  pnpm-lock.yaml  requirements.txt  test.sh  turbo.json  vercel.json  vercel2.json
backend/: .env.example  .gitignore  .vercelignore  ADDITIONAL_PATTERN_FIXES.md  COMPREHENSIVE_AI_PATTERN_UPDATE.md  CONVEX_SETUP.md  EM_DASH_REMOVAL_UPDATE.md  FINAL_IMPROVEMENTS_SUMMARY.md  FIXES_APPLIED.md  HUMANIZATION_IMPROVEMENT_PLAN.md  IMPLEMENTATION_STATUS.md  LENGTH_CONTROL_CONFIRMED.md  LLM_CONFIGURATION_GUIDE.md  MIGRATION.md  ORIGINALITY_AI_DEEP_ANALYSIS.md  ORIGINALITY_AI_FACTORS.md  PATTERN_OVERUSE_FIX.md  PYDANTIC_GUIDE.md  QUICK_START_V2.md  README.md  REFACTORING_SUMMARY.md  SENTENCE_LEVEL_PATTERN_FIX.md  SETUP_ANTHROPIC.md  V2_IMPROVEMENTS_SUMMARY.md  V3_CASUAL_HUMAN_UPDATE.md  V4_IMPLEMENTATION_SUMMARY.md  V4_LENGTH_CONTROL_FIX.md  V4_ORIGINALITY_AI_ENHANCEMENT.md  V4_ORIGINALITY_AI_ENHANCEMENTS_FINAL.md  V4_QUICK_START.md  build.sh  coverage.xml  pyproject.toml  pytest.ini  requirements.txt  vercel.json
backend/api/: index.py
backend/docs/: GPTZERO_QUICK_REFERENCE.md  GPTZERO_SETUP.md
backend/eval/: DELIVERABLES_SUMMARY.md  QUICK_START.md  README.md  SUMMARY.md  TEST_GUIDE.md  config.py  env.example.txt  external_detectors.py  requirements.txt
backend/eval/datasets/: README.md
backend/eval/datasets/ai_only/Academic/: arabic_academic_long.json  bengali_academic_long.json  chinese_academic_long.json  english_academic_long.json  french_academic_long.json  hindi_academic_long.json  (+6 more)
backend/eval/scripts/: generate_ai_samples.py  run_all_tests.py  test_adversarial_robustness.py  test_constraint_satisfaction.py  test_detect_accuracy.py  test_detect_simple.py  test_detector_passrate.py  test_ensemble_calibration.py  test_humanize_simple.py  test_length_mode.py  test_multi_language_matrix.py  test_semantic_preservation.py  test_style_adherence.py
backend/scripts/: extract_gptzero_cookies.py  extract_quillbot_cookies.py  test_gptzero_api.py
backend/src/: index.py  index3.py
backend/src/api/: HUMANIZATION_WORKFLOW.md  README.md  config.py  main.py  models.py  pydantic_examples.py
backend/src/api/services/: __init__.py  convex_client.py  crossplag_detector.py  detection_service.py  embedding_service.py  format_preservation.py  gptzero_detector.py  grammarly_detector.py  humanization_prompts.py  humanization_prompts_v2.py  humanization_prompts_v4.py  humanization_service.py  language_detection.py  llm_service.py  pattern_breaker.py  prompts.py  quillbot_detector.py  scribbr_detector.py  stealthwriter_service.py  text_chunking.py  validation_service.py
backend/src/api/utils/: __init__.py  sanitization.py
backend/src/api/v1/: __init__.py
backend/tests/: test_detect_endpoint.py  test_gptzero_detector.py  test_humanize_endpoint.py  test_placeholder.py
(+918 files in other folders)
