[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ruff>=0.14.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_uv"]

[tool.distutils.bdist_wheel]
universal = true

[dependency-groups]
dev = ["pytest-cov>=5.0.0", "pyright>=1.1.381"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.14"
venvPath = "."
venv = ".venv"
