[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for humanize"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.14.4",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    "scalar-fastapi>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_uv"]

[tool.distutils.bdist_wheel]
universal = true

[dependency-groups]
dev = ["pytest-cov>=5.0.0", "pyright>=1.1.381"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
